[gd_scene load_steps=4 format=3 uid="uid://dqrjflnfv1b40"]

[ext_resource type="Script" path="res://GUI/author_screen.gd" id="1_qpype"]
[ext_resource type="FontVariation" uid="uid://c5nyi8stdd14c" path="res://Src/Fonts/main_font.tres" id="2_nd47y"]
[ext_resource type="Texture2D" uid="uid://bomrrwach3x76" path="res://Src/GUI/g803.png" id="3_ffxcw"]

[node name="AuthorScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qpype")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0, 0.376471, 1)

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(226, 31)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 138.0
offset_top = -123.0
offset_right = 364.0
offset_bottom = -81.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="Header" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -395.0
offset_right = 372.0
offset_bottom = -297.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Команда
Punch Game Company"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="Header"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 176.0
offset_right = 1600.0
offset_bottom = 391.0
theme_override_constants/separation = 200
alignment = 1

[node name="Header2" type="Label" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Саша
Nraj10
Каменев"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="HBoxContainer/Header2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Header3" type="Label" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Антон 
derishlan 
Васильев"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="HBoxContainer/Header3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Header4" type="Label" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Артем
theneoxs
Макаров"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="HBoxContainer/Header4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -295.0
offset_top = -184.0
offset_right = -153.0
offset_bottom = -41.9999
grow_horizontal = 0
grow_vertical = 0
rotation = -0.615033
texture = ExtResource("3_ffxcw")
expand_mode = 1

[node name="Point1" type="Control" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Header2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -28.0
offset_right = 372.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Jam
Тяжелый выбор"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="Header2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Header3" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.270588)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = 164.0
offset_right = 408.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_nd47y")
theme_override_font_sizes/font_size = 64
text = "Спасибо, что поиграли в нашу игру!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Point1" type="Control" parent="Header3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="Back" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
